# ExplainFlow

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  gen_test.py  mdd.md  pencil-new.pen  req1.json  test_request.json  test_teacher_whiteboard.py  test_teacher_whiteboard_v2.py  教学视频制作软件.txt
services/api/: .env.example  main.py  pyproject.toml
services/api/src/core/: config.py  golpo_styles.json  golpo_styles.py  llm.py  logging.py  text_utils.py  topic_terms.py  validation.py  visual_prompts.py  visual_teaching_rules.json
services/api/src/explain/: brief_enrich.py  brief_parse.py  graph.py  models.py  prompts.py  router.py  service.py
services/api/src/imagegen/: prompts.py  router.py  service.py
services/api/src/narration/: router.py  service.py
services/api/src/planner/: __init__.py  models.py  router.py  service.py
services/api/src/planner/coverage/: analyzer.py  appender.py  corpus.py  generic_specs.py  specs.py
services/api/src/planner/fallback/: __init__.py  _tsx_template_string.py  cooking_terms.py  draw_ops.py  geometry.py  scene_builder_annotation.py  scene_builder_base.py  scene_builder_board.py  scene_builder_device.py  scene_builder_diagrams.py  scene_builder_diagrams2.py  scene_builder_draw.py  scene_builder_habits.py  scene_builder_main.py  scene_builder_railway.py  scene_builder_raster.py  scene_builder_reference.py  scene_diagram.py  scene_extra.py  scene_info.py  spec.py  tsx_template.py
services/api/src/planner/prompts/: remotion_codegen.py  storyboard.py
services/api/src/render/: models.py  router.py
(+106 files in other folders)
